# librespot-auth

./: .gitignore  Cargo.toml  LICENCE  README.md
.cargo/: config.toml
src/: main.rs
