[package]
name = "librespot-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
librespot-core = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-discovery = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sha1 = "0.10.5"
hex = "0.4.3"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }

[profile.static]
inherits = "release"
panic = "abort"
lto = true
strip = true
